--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
     "name": "class_survey_v1",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "app.js",
     "scripts": {
-        "db:connect": "psql postgres://atabwfsu:lHI29DSW6J7e9VKXGVNDBARvp4nD1HVw@hansken.db.elephantsql.com/atabwfsu",
-        "db:init": "psql -f schema.sql postgres://atabwfsu:lHI29DSW6J7e9VKXGVNDBARvp4nD1HVw@hansken.db.elephantsql.com/atabwfsu",
-        "db:seed": "psql -f seed.sql postgres://atabwfsu:lHI29DSW6J7e9VKXGVNDBARvp4nD1HVw@hansken.db.elephantsql.com/atabwfsu",
-        "db:drop": "psql -f reset.sql postgres://atabwfsu:lHI29DSW6J7e9VKXGVNDBARvp4nD1HVw@hansken.db.elephantsql.com/atabwfsu",
+        "db:init": "psql -f ./sql/schema.sql postgres://atabwfsu:lHI29DSW6J7e9VKXGVNDBARvp4nD1HVw@hansken.db.elephantsql.com/atabwfsu",
+        "db:seed": "psql -f ./sql/seed.sql postgres://atabwfsu:lHI29DSW6J7e9VKXGVNDBARvp4nD1HVw@hansken.db.elephantsql.com/atabwfsu",
+        "db:drop": "psql -f .sql/schema.sql postgres://atabwfsu:lHI29DSW6J7e9VKXGVNDBARvp4nD1HVw@hansken.db.elephantsql.com/atabwfsu",
         "db:reset": "npm run db:drop; npm run db:init;",
+        "dev": "nodemon app.js",
+        "start": "node app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "express-es6-template-engine": "^2.2.3",
+        "pg-promise": "^10.10.2"
+    }
 }
